--- a/style.css
+++ b/style.css
@@ -788,3 +788,18 @@ footer .social-links a {
         font-size: 1.8rem;
     }
 }
+
+
+.typed-cursor {
+    font-weight: bold;
+    font-size: 2rem;
+    color: black;
+    display: inline-block;
+    animation: blink 0.7s infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
